--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+Columnar==1.3.1
 fake-rpi==0.7.1
 grpcio==1.37.0
 grpcio-tools==1.37.0
 numpy==1.20.2
 protobuf==3.15.8
+pygame==2.0.1
 six==1.15.0
+toolz==0.11.1
+wcwidth==0.2.5
