--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 Columnar==1.3.1
 fake-rpi==0.7.1
-grpcio==1.37.0
-grpcio-tools==1.37.0
+grpcio==1.37.1
+grpcio-tools==1.37.1
+importlib-metadata==4.0.1
 numpy==1.20.2
-protobuf==3.15.8
+protobuf==3.16.0
 pygame==2.0.1
 six==1.15.0
 toolz==0.11.1
+typing-extensions==3.10.0.0
 wcwidth==0.2.5
+zipp==3.4.1
