--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ grpcio-tools==1.37.1
 numpy==1.20.2
 pygame==2.0.1
 sox==1.4.1
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.8.1
+python-vlc==3.0.12118
