--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,29 @@
+certifi==2021.5.30
+charset-normalizer==2.0.6
+click==8.0.1
 Columnar==1.3.1
 fake-rpi==0.7.1
+Flask==2.0.2
 grpcio==1.37.1
 grpcio-tools==1.37.1
+idna==3.2
+importlib-metadata==4.8.1
+itsdangerous==2.0.1
+Jinja2==3.0.2
+MarkupSafe==2.0.1
 numpy==1.20.2
+protobuf==3.18.1
 pygame==2.0.1
-sox==1.4.1
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
 python-vlc==3.0.12118
+requests==2.26.0
+six==1.16.0
+sox==1.4.1
+toolz==0.11.1
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+wcwidth==0.2.5
+Werkzeug==2.0.1
+zipp==3.6.0
