--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==2.0.6
 click==8.0.1
 Columnar==1.3.1
 ezenv==0.92
+fake-rpi==0.7.1
 ffpyplayer==4.3.2
 Flask==2.0.2
 Flask-Cors==3.0.10
@@ -15,10 +16,13 @@ Jinja2==3.0.2
 MarkupSafe==2.0.1
 numpy==1.20.2
 opencv-python==4.5.3.56
+pandas==1.3.4
 pip-autoremove==0.10.0
 protobuf==3.18.1
 pygame==2.0.1
+python-dateutil==2.8.2
 python-vlc==3.0.12118
+pytz==2021.3
 requests==2.26.0
 six==1.16.0
 sox==1.4.1
